# chrome-devtools-mcp

./: .copilotignore  .devtoolsignore  .dockerignore  .gitignore  .mcp.json  .prettierignore  .vscodeignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FORK.md  FixBandV2  IMPROVEMENTS.md  MCP_SETUP.md  NOTICE  PUSH_INSTRUCTIONS.md  README.md  SECURITY.md  SPEC.md  STEALTH_FEATURES.md  WEBAUTHN_IMPLEMENTATION.md  bootstrap.js  client-handlers.ts  codebase-worker-proxy.ts  codebase-worker.ts  docker-entrypoint.sh  esbuild.js  eslint.config.mjs  extension.ts  gemini-extension.json  gemini-extension.md  host-handlers.ts  implementation_ideas.md  knip.json  package-lock.json  package.json  pnpm-lock.yaml  puppeteer.config.cjs  (+28 more)
.claude/: CLAUDE.md  settings.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.reports/: DELETION_LOG.md  dead-code-analysis.md
.well-known/: x402.json
deploy/: chatgpt.Dockerfile
docs/: CALIBRATION_EXPERT_GUIDE.md  MODEL_CALIBRATION_FINDINGS.md  SPEC.md  ai-question.txt  bookmark-env-variable-issue-investigation.md  chatgpt.md  claude-handoff-2026-01-29.md  cli.md  (+19 more)
odds/: README.md  pyproject.toml  requirements.txt
odds/sql/: schema.sql
odds/src/odds_pipeline/: __main__.py  backfill.py  cli.py  collect_action_network.py  collect_espn.py  collect_kenpom.py  collect_odds.py  collect_scores.py  config.py  db.py  freshness.py  normalize.py  predict.py  schema.py  train.py  util.py  validate.py
(+916 files in other folders)
